[package]
name = "rsomics-bam-subsample"
version = "0.1.0"
description = "Random downsampling of BAM/SAM records by fraction or target count"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-bam-subsample"
path = "src/main.rs"

[lib]
name = "rsomics_bam_subsample"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
noodles = { workspace = true, features = ["sam", "bam"] }
rand = "0.8"

[lints]
workspace = true
