[package]
name = "rsomics-bam-subsample"
version = "0.1.1"
description = "Random downsampling of BAM/SAM records by fraction or target count"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-bam-subsample"
path = "src/main.rs"

[lib]
name = "rsomics_bam_subsample"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
noodles = { version = "0.110", features = ["sam", "bam"]  }
rand = "0.8"

